# kmp-core

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.gradle.kts  catalog-info.yaml  catalog-yaml  gradle.properties  settings.gradle.kts  test.html
.github/: FUNDING.yml
androidApp/: build.gradle
annotations/: build.gradle.kts
catalog/: build.gradle.kts  kmpLibs.versions.toml
convention-plugins/: settings.gradle.kts
core-icons/: README.md  build.gradle.kts
core-preview/: .firebaserc  README.md  build.gradle.kts  firebase.json
core-test/: build.gradle.kts
core-ui/: build.gradle.kts  rules.pro
core-ui-test/: .gitignore  build.gradle.kts
flutter_plugin/: README.md  ffigen.yaml  pubspec.yaml
flutter_plugin/src/: CMakeLists.txt  flutter_plugin.c
gradle/: kmpLibs.versions.toml  libs.versions.toml
gradle-plugin/: build.gradle.kts  settings.gradle.kts
iosApp/: Podfile  README.md
jsonCompare/: build.gradle.kts
jvmApi/: build.gradle.kts
lib/: build.gradle.kts
processor/: build.gradle.kts
react-native-app/: App.js  README.md  app.json  package.json
react-native-core-client/: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-core-client.podspec  tsconfig.json
reactNativeApp/: app.json  package-lock.json  package.json
scripts/: coverage.sh  publish.sh  publishCatalog.sh  publishLocal.sh  publishPlugin.sh
weChatApp/: app.js  app.json  project.config.json  project.private.config.json
webApp/: .gitignore  README.md  craco.config.js  package.json
website/: Gemfile  README.md  (+2 more)
(+2518 files in other folders)
